# Snake_AI_RL

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SAE4-DevAppComplete.pptx  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_duel_benchmark.py
data/: .gitignore  q_table.json.dvc  q_table.msgpack.dvc
docs/: architecture.md  benchmarks.md  installation.md  operations.md  references.md
docs/architecture/: explanation.md
docs/architecture/src/: packages.mermaid
references/: references_IA.md
ressources/diagrams/final-version/code/: pachage-diagram_utils.puml  package-diagram_agents  package-diagram_engine.puml  package-diagram_general.puml  package-diagram_simulation.puml  package-diagram_ui.puml
scripts/: check_config.py  check_encoder.py  migrate_to_msgpack.py  test_env.py  test_tensorboard.py
snake_ai/agents/astar/: astar_agent.py
snake_ai/agents/rl/: encoders.py  rl_agent.py  trainer.py
snake_ai/config/: settings.py
snake_ai/core/: game_state.py
snake_ai/engine/: game.py
snake_ai/simulation/: duel_manager.py  mode_manager.py
snake_ai/ui/: charts.py  renderer.py
snake_ai_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_astar.py  test_astar.py.bak  test_benchmark.py  test_duel_multithreading.py  test_engine.py  test_game_state.py  test_mode_transition.py
