[project]
name = "snake-ai-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.1.2",
    "setuptools<70.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
]

[dependency-groups]
dev = [
    "dvc>=3.66.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
