[project]
name = "snake-ai-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "msgpack>=1.1.2",
    "pydantic-settings>=2.13.1",
    "pygame>=2.6.1",
    "setuptools<70.0.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "dvc>=3.66.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "types-protobuf>=6.32.1.20260221",
]

[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["."]
include=["snake_ai*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
